# src/databases/@types/booking.type.ts
@@ -1,0 +1,9 @@
+export interface IBookingInfo{
+    tables : string[];
+    customer_id ?: string;
+}
+
+export interface IBooking{
+    date : Date;
+    booking_info : IBookingInfo[];
+}
